[project]
name = "mtbl-valuations"
version = "0.1.0"
description = "MTBL Valuations after transform pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.3.260113",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.5",
]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "no_cache: disable fixture caching for this test",
]

[tool.coverage.run]
omit = ["mtbl_valuations/__main__.py", "tests/*"]
